corregi lista portfolio

--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@
                 <h2>Portfolio</h2>
                 <hr>
                 <ul>
-                    <a class="a-icon" href="#"><li class="port-icon"><img src="Assets/img/port-ciudad-zombie-icon.png" alt=""></li></a>
-                    <a class="a-icon" href="#"><li class="port-icon"><img src="Assets/img/port-cv-icon.png" alt=""></li></a>
-                    <a class="a-icon" href="#"><li class="port-icon"><img src="Assets/img/port-encuestados-icon.png" alt=""></li></a>
-                    <a class="a-icon" href="#"><li class="port-icon"><img src="Assets/img/port-mapa-interactivo-icon.png" alt=""></li></a>
-                    <a class="a-icon" href="#"><li class="port-icon"><img src="Assets/img/port-peli-vs-peli-icon.png" alt=""></li></a>
-                    <a class="a-icon" href="#"><li class="port-icon"><img src="Assets/img/port-pixel-art-icon.png" alt=""></li></a>
-                    <a class="a-icon" href="#"><li class="port-icon"><img src="Assets/img/que-veo-icon.png" alt=""></li></a>
-                    <a class="a-icon" href="#"><li class="port-icon"><img src="Assets/img/recargado-icon.png" alt=""></li></a>
-                    <a class="a-icon" href="#"><li class="port-icon"><img src="Assets/img/rompecabezas-icon.png" alt=""></li></a>
+                    <li class="port-icon"><img src="Assets/img/port-ciudad-zombie-icon.png" alt=""></li>
+                    <li class="port-icon"><img src="Assets/img/port-cv-icon.png" alt=""></li>
+                    <li class="port-icon"><img src="Assets/img/port-encuestados-icon.png" alt=""></li>
+                    <li class="port-icon"><img src="Assets/img/port-mapa-interactivo-icon.png" alt=""></li>
+                    <li class="port-icon"><img src="Assets/img/port-peli-vs-peli-icon.png" alt=""></li>
+                    <li class="port-icon"><img src="Assets/img/port-pixel-art-icon.png" alt=""></li>
+                    <li class="port-icon"><img src="Assets/img/que-veo-icon.png" alt=""></li>
+                    <li class="port-icon"><img src="Assets/img/recargado-icon.png" alt=""></li>
+                    <li class="port-icon"><img src="Assets/img/rompecabezas-icon.png" alt=""></li>
                 </ul>
             </section>
         </article>
