corregi lista portfolio

--- a/index.html
+++ b/index.html
@@ -131,24 +131,22 @@
                     </li>
             </ul>
             </section>
-            <section id="portfolio">
+            <section class="port-icon" id="portfolio">
                 <h2>Portfolio</h2>
                 <hr>
                 <ul>
-                    <li class="port-icon"><img src="Assets/img/port-ciudad-zombie-icon.png" alt=""></li>
-                    <li class="port-icon"><img src="Assets/img/port-cv-icon.png" alt=""></li>
-                    <li class="port-icon"><img src="Assets/img/port-encuestados-icon.png" alt=""></li>
-                    <li class="port-icon"><img src="Assets/img/port-mapa-interactivo-icon.png" alt=""></li>
-                    <li class="port-icon"><img src="Assets/img/port-peli-vs-peli-icon.png" alt=""></li>
-                    <li class="port-icon"><img src="Assets/img/port-pixel-art-icon.png" alt=""></li>
-                    <li class="port-icon"><img src="Assets/img/que-veo-icon.png" alt=""></li>
-                    <li class="port-icon"><img src="Assets/img/recargado-icon.png" alt=""></li>
-                    <li class="port-icon"><img src="Assets/img/rompecabezas-icon.png" alt=""></li>
+                    <li><img src="Assets/img/port-ciudad-zombie-icon.png" alt=""></li>
+                    <li><img src="Assets/img/port-cv-icon.png" alt=""></li>
+                    <li><img src="Assets/img/port-encuestados-icon.png" alt=""></li>
+                    <li><img src="Assets/img/port-mapa-interactivo-icon.png" alt=""></li>
+                    <li><img src="Assets/img/port-peli-vs-peli-icon.png" alt=""></li>
+                    <li><img src="Assets/img/port-pixel-art-icon.png" alt=""></li>
+                    <li><img src="Assets/img/que-veo-icon.png" alt=""></li>
+                    <li><img src="Assets/img/recargado-icon.png" alt=""></li>
+                    <li><img src="Assets/img/rompecabezas-icon.png" alt=""></li>
                 </ul>
             </section>
         </article>
-        <!-- <a href="#main"><img src="assets\img\up-button.png" alt="" id="fixedbutton"></a> -->
-        
     </main>
 <script type="" src=".\Assets\scripts.js"></script>
 </body>
