cambio de avatar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main id="main">
         <aside class="col">
             <div class="img-avatar">
-                <img src=".\Assets\img\avatar.jpg" alt="" srcset="">
+                <img src=".\Assets\img\avatar2.jpg" alt="" srcset="">
             </div>
             <div class="section-nav">
                 <ul>
